--- a/InterviewTest.DriverData/InterviewTest.DriverData.csproj
+++ b/InterviewTest.DriverData/InterviewTest.DriverData.csproj
@@ -41,15 +41,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnalyserLookup.cs" />
+    <Compile Include="Analysers\AnalyserHelper.cs" />
     <Compile Include="Analysers\DeliveryDriverAnalyser.cs" />
     <Compile Include="Analysers\FormulaOneAnalyser.cs" />
     <Compile Include="Analysers\FriendlyAnalyser.cs" />
     <Compile Include="Analysers\GetawayDriverAnalyser.cs" />
     <Compile Include="Analysers\IAnalyser.cs" />
     <Compile Include="CannedData.cs" />
+    <Compile Include="DrivingData.cs" />
     <Compile Include="HistoryAnalysis.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Period.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="CannedDrivingData.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
